Adicionado detalhes minimalistas na estilização

--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
 
     <!-- FOOTER -->
     <div class='footer'>
-        
+        <h3>Developed by Cristhian &copy;2021</h3>
     </div>
 </body>
 </html>
