Estilização da tela de login finalizada (ainda aberta a alterações)

--- a/login.html
+++ b/login.html
@@ -23,7 +23,22 @@
             </div>
             <div class='entrada'>
                 <div class='caixa'>
-
+                    <h1>Login</h1>
+                    <div class='formulario'>
+                        <form>
+                            <input type="text" id="in_login" placeholder="Usuário" autofocus>
+                            <br>
+                            <input type="password" id="in_senha" placeholder="Senha">
+                        </form>
+                        <button id='btn'>
+                            Entrar
+                        </button>
+                    </div>
+                    <div class='create_account'>
+                        Ainda não tem uma conta? 
+                        <br>
+                        <u>CADASTRE-SE</u>
+                    </div>
                 </div>
             </div>
         </div>
