Adicionado escopo da tela de cadastro. Botões da tela de login já referenciados

--- a/login.html
+++ b/login.html
@@ -11,7 +11,9 @@
     <!-- HEADER -->
     <div class='header'>
         <div class='container'>
-            <h1>LookMuay</h1>
+            <a href="file:///C:/Users/jeferson.m.silva/Music/Projeto_Individual/login.html">
+                <h1>LookMuay</h1>
+            </a>
         </div>
     </div>
 
@@ -37,7 +39,9 @@
                     <div class='create_account'>
                         Ainda não tem uma conta? 
                         <br>
-                        <u>CADASTRE-SE</u>
+                        <a href="file:///C:/Users/jeferson.m.silva/Music/Projeto_Individual/cadastro.html">
+                            <u>CADASTRE-SE</u>
+                        </a>
                     </div>
                 </div>
             </div>
