alterada estilização e iniciação do fomulario de cadastro

--- a/confirmacao.html
+++ b/confirmacao.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastre-se</title>
-    <link rel="stylesheet" href="cadastro.css">
+    <title>Confirmação</title>
+    <link rel="stylesheet" href="confirmacao.css">
 </head>
 <body>
     <!-- HEADER -->
@@ -21,14 +21,13 @@
     <div class='cadastro'>
         <div class='container'>
            <div class='cad_media'>
-                <h1>Crie sua conta</h1>
-                <div class='box'>
-                    <form action="">
-                        <fieldset>
-                            
-                        </fieldset>
-                    </form>
-                </div>
+                <h1>Cadastro efetudado com sucesso!</h1>
+                <h2>
+                    Realize seu 
+                    <a href="file:///C:/Users/jeferson.m.silva/Music/Projeto_Individual/login.html">
+                        <u>login</u>
+                    </a> 
+                </h2>
            </div>
         </div>
     </div>
