integração do banco de dados nas telas de cadastro e login. Alterações em estilização. Ainda falta terminar de implementar banco de dados.

--- a/api-site/public/aprender.html
+++ b/api-site/public/aprender.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprenda sozinho</title>
     <link rel="stylesheet" href="aprender.css">
+    <link rel="icon" href="./img/logo_pi.png">
 </head>
 <body>
     <!-- HEADER -->
