--- a/api-site/public/feed.html
+++ b/api-site/public/feed.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LookMuay</title>
     <link rel="stylesheet" href="feed.css">
+    <link rel="icon" href="./img/logo_pi.png">
 </head>
 <body>
         <!-- HEADER -->
