--- a/api-site/public/index.html
+++ b/api-site/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
+    <link rel="icon" href="./img/logo_pi.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <!-- HEADER -->
@@ -13,6 +18,9 @@
         <div class='container'>
             <a href="index.html">
                 <h1>LookMuay</h1>
+            </a>
+            <a href="quem_somos.html">
+                <h3>O que é a LookMuay?</h3>
             </a>
         </div>
     </div>
@@ -64,7 +72,7 @@
     }
 
     function entrar() {
-        aguardar();
+        
 
         var formulario = new URLSearchParams(new FormData(document.getElementById("form_login")));
 
@@ -76,13 +84,11 @@
 
         if (email == "" || senha == "") {
             window.alert("Preencha todos os campos para prosseguir!");
-            finalizarAguardar();
             return false;
         }
 
         if (email.indexOf("@") == -1 || email.indexOf(".com") == -1) {
-            window.alert("Ops, e-mail inválido! Verifique e tente novamente.");
-            finalizarAguardar();
+            window.alert("Ops, e-mail inválido! Verifique e tente novamente.");    
             return false;
         }
 
@@ -111,7 +117,6 @@
 
                 resposta.text().then(texto => {
                     console.error(texto);
-                    finalizarAguardar(texto);
                 });
             }
 
@@ -122,4 +127,4 @@
         return false;
     }
 
-</script>
+</script>   
