--- a/api-site/public/quem_somos.html
+++ b/api-site/public/quem_somos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem somos | LookMuay</title>
-    <link rel="stylesheet" href="quem_somos.css">
+    <link rel="stylesheet" href="./css/quem_somos.css">
     <link rel="icon" href="./img/logo_pi.png">
 </head>
 <body>
@@ -14,6 +14,9 @@
         <div class='container'>
             <a href="index.html">
                 <h1>LookMuay</h1>
+                <a href="quem_somos.html">
+                    <h3>O que é a LookMuay?</h3>
+                </a>
             </a>
         </div>
     </div>
@@ -38,7 +41,9 @@
 
     <!-- FOOTER -->
     <div class='footer'>
-        <h3>Developed by Cristhian &copy;2021</h3>
+        <a href="criador.html">
+            <h3>Developed by Cristhian &copy;2021</h3>
+        </a>
     </div>
 </body>
 </html>
