--- a/api-site/public/cadastro.html
+++ b/api-site/public/cadastro.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastre-se</title>
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="./css/cadastro.css">
     <link rel="icon" href="./img/logo_pi.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
