detalhamento de css, site ta lindooooo

--- a/api-site/public/feed.html
+++ b/api-site/public/feed.html
@@ -16,19 +16,22 @@
                     <h1>LookMuay</h1>
                     <ul class='navbar'>
                         <li>
-                            <a href="">Academia</a>
+                            <a href="academia.html">Academia</a>
                         </li>
                         |
                         <li>
-                            <a href="./feed.html">Feed</a>
+                            <a href="feed.html">Feed</a>
                         </li>
                         |
                         <li>
-                            <a href="./aprender.html">Golpes</a>
+                            <a href="aprender.html">Golpes</a>
                         </li>
                         |
                         <li>
-                            <a href="">Sair</a>
+                            <a href="index.html">
+                                Sair
+                                <img height="13px" src="./img/icon.png">
+                            </a>
                         </li>
                     </ul>
                 </a>
