--- a/api-site/public/index.html
+++ b/api-site/public/index.html
@@ -110,8 +110,8 @@
                     console.log(JSON.stringify(json));
 
                     sessionStorage.EMAIL_USUARIO = json.email;
-                    sessionStorage.NOME_USUARIO = json.nome;
-                    sessionStorage.ID_USUARIO = json.id;
+                    sessionStorage.NOME_USUARIO = json.nomeAtleta;
+                    sessionStorage.ID_USUARIO = json.idAtleta;
 
                 });
 
