banco de dados adicionado. Validar com professora vivian ou brandao

--- a/api-site/public/academia.html
+++ b/api-site/public/academia.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de academia</title>
     <link rel="stylesheet" href="./css/academia.css">
+    <link rel="icon" href="./img/logo_pi.png">
 </head>
 <body>
     <!--HEADER-->
