tela de feed com api integrada funcionando

--- a/api-site/public/analytics.html
+++ b/api-site/public/analytics.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de academia</title>
-    <link rel="stylesheet" href="./css/academia.css">
+    <link rel="stylesheet" href="./css/analytics.css">
     <link rel="icon" href="./img/logo_pi.png">
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <h1>LookMuay</h1>
                 <ul class='navbar'>
                     <li>
-                        <a href="academia.html">Academia</a>
+                        <a href="graduacao.html">Graduação</a>
                     </li>
                     |
                     <li>
@@ -42,8 +42,7 @@
 
     <div class='cadastro'>
         <div class='container'>
-            <h1>Treina em alguma academia que não está em nosso sistema ?</h1>
-            <h2>Cadastre aqui!</h2>
+            <h1>Usuários e suas graduações</h1>
         </div>
     </div>
 
