--- a/api-site/public/aprender.html
+++ b/api-site/public/aprender.html
@@ -16,7 +16,7 @@
                 <h1>LookMuay</h1>
                 <ul class='navbar'>
                     <li>
-                        <a href="academia.html">Academia</a>
+                        <a href="graduacao.html">Graduação</a>
                     </li>
                     |
                     <li>
