--- a/api-site/public/aprender.html
+++ b/api-site/public/aprender.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/aprender.css">
     <link rel="icon" href="./img/logo_pi.png">
 </head>
-<body>
+<body onload="validarSessao()">
     <!-- HEADER -->
     <div class='header'>
         <div class='container'>
@@ -27,11 +27,9 @@
                         <a href="aprender.html">Golpes</a>
                     </li>
                     |
-                    <li>
-                        <a href="index.html">
-                            Sair
-                            <img height="13px" src="./img/icon.png">
-                        </a>
+                    <li onclick="limparSessao()">
+                        Sair
+                        <img height="13px" src="./img/icon.png">
                     </li>
                 </ul>
             </a>
@@ -111,7 +109,21 @@
         container.innerHTML += golpe;
     }
 
-    
+    function limparSessao() {
+    sessionStorage.clear();
+    window.location = "../index.html";
+}
+
+function validarSessao() {
+
+    var email = sessionStorage.EMAIL_USUARIO;
+    var nome = sessionStorage.NOME_USUARIO;
+
+    if (email == null && nome == null) {
+        
+        window.location = "../index.html";
+    }
+}
 </script>
 
 
