--- a/api-site/public/feed.html
+++ b/api-site/public/feed.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 </head>
-<body onload="atualizarFeed()">
+<body onload="validarSessao(), atualizarFeed()">
         <!-- HEADER -->
         <div class='header'>
             <div class='container'>
@@ -31,11 +31,9 @@
                             <a href="aprender.html">Golpes</a>
                         </li>
                         |
-                        <li>
-                            <a href="index.html">
+                        <li onclick="limparSessao()">
                                 Sair
                                 <img height="13px" src="./img/icon.png">
-                            </a>
                         </li>
                     </ul>
                 </a>
@@ -154,6 +152,20 @@
         });
     }
 
+    function limparSessao() {
+    sessionStorage.clear();
+    window.location = "../index.html";
+}
 
+function validarSessao() {
+
+    var email = sessionStorage.EMAIL_USUARIO;
+    var nome = sessionStorage.NOME_USUARIO;
+
+    if (email == null && nome == null) {
+        
+        window.location = "../index.html";
+    }
+}
 
 </script>
