alterações basicas na estilização, verificar API de curtidas com monitores

--- a/api-site/public/cadastro.html
+++ b/api-site/public/cadastro.html
@@ -91,7 +91,7 @@
                             <label class="label_input" for="acad">Academia: </label>
                             <br>
                             <select id='in_academia' name='academia' >
-                                <option value="null">Sem academia</option>
+                                <option value="">Sem academia</option>
                                 <option value="1">Inova</option>
                                 <option value="2">Tiger Thai</option>
                                 <option value="3">Team Nogueira</option>
@@ -99,7 +99,7 @@
                                 <option value="5">Thai Fighters</option>
                                 <option value="6">Thai Combat</option>
                                 <option value="7">Thai Brasil</option>
-                                <option value="null">Outra academia</option>
+                                <option value="">Outra academia</option>
                             </select>
                         </div>
                     </div>
