--- a/api-site/public/criador.html
+++ b/api-site/public/criador.html
@@ -30,7 +30,7 @@
                 <h2>Sobre o criador</h2>
                 <p>
                     A LookMuay foi desenvolvida por Cristhian Mendes, 18 anos, nascido em São Paulo e estudante de Análise e desenvolvimento
-                    de sistemas na Faculdade de Tecnologia Bandeirantes. O Muay Thai foi introduzido em sua vida em 2020 em meio à um momento
+                    de sistemas na São Paulo Tech School. O Muay Thai foi introduzido em sua vida em 2020 em meio à um momento
                     difícil de sua vida e o ajudou a se auto-conhecer, entender seu autocontrole e a lidar com suas questões e problemas
                     pessoais, tudo isso em um ambiente acolhedor de aprendizagem e amigável.
                     <br><br>
