--- a/api-site/public/quem_somos.html
+++ b/api-site/public/quem_somos.html
@@ -27,13 +27,15 @@
            <div class='cad_media'>
                 <h1>Conheça a LookMuay</h1>
                 <div class='content'>
-                    <p>A LookMuay é a primeira rede social que reune o público que gosta de Muay Thai,
+                    <p> A LookMuay é a primeira rede social que reune o público que gosta de Muay Thai,
                          sendo eles praticantes ou não da arte marcial.
                          Agora é possível compartilhar com outras pessoas seus treinos, pensamentos, motivações e dicas
                           em uma rede social que incentiva a constância para quem já pratica e a inicialização na arte marcial
                           para quem ainda não pratica com uma área para aprender os golpes básicos.
                     </p>
-                
+                </div>
+                <div id='comercial'>
+                    <video  controls><source src="./video/comercial.mp4" type="video/mp4"></video>
                 </div>
            </div>
         </div>
